<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etBotToken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_token"
        android:inputType="text" />

    <EditText
        android:id="@+id/etChatId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_chat_id"
        android:layout_marginTop="10dp"
        android:inputType="numberSigned" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_filter"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_filter"
        android:inputType="text" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_test"
        android:backgroundTint="#4CAF50"
        android:layout_marginTop="10dp"/>

</LinearLayout>